Fix embed/overlay z-index

--- a/app/assets/stylesheets/ad_unit/base/_embed.scss
+++ b/app/assets/stylesheets/ad_unit/base/_embed.scss
@@ -3,7 +3,7 @@
   background: #ffffff;
   top: 0;
   left: 0;
-  z-index: 9999999999;
+  z-index: 9999999;
   display: none;
 }
 
