--- a/app/assets/stylesheets/ad_unit/base/_overlays.scss
+++ b/app/assets/stylesheets/ad_unit/base/_overlays.scss
@@ -3,7 +3,7 @@
   background: rgba(#ffffff, 0.85);
   color: $blue;
   display: none;
-  z-index: 9999999999;
+  z-index: 5555555;
   text-align: center;
   font-weight: bold;
   position: absolute;
